--- a/projects.html
+++ b/projects.html
@@ -225,14 +225,14 @@
         <!-- START CARD -->
         <div class="card" id="team3">
             <div class="team-photo">
-                <img src="img/diary.jpg" alt="team photo">
+                <img src="img/diary1.jpg" alt="team photo">
+                <div class="button"><a href="https://lyath.000webhostapp.com/" target="_blank"> Visit </a></div>
             </div>
             <div class="description">
                 <h1>STUDENT'S DIARY</h1>
                 <div class="text">
                     <p><b>Team:</b> Nazar Los,Andriy Tymkiv,Julia Yuvchenko,Nastia Antonyk,Vitaliy Horishnyi.</p>
-                    <p class='truncated'> "Oh , what is my hometask, does anyone know it?? It's very boring to find on all group's mеssages!" "Where is it? Where am I suppose to find it? I don't have this book! " "I wrote important information on a piece of paper, but I lost
-                        it! What could I do now??" Іf you are a student - you definitly understand what this sentences about. So we decided to develop an Android App which will solve such problems.</p>
+                    <p class='truncated'> "Oh , what is my hometask, does anyone know it?? It's very boring to find on all group's mеssages!" "Where is it? Where am I suppose to find it? </p>
                 </div>
             </div>
         </div>
@@ -241,16 +241,15 @@
 
 
         <!-- START CARD -->
-        <div class="card">
+        <div class="card" id="team3">
             <div class="team-photo">
-                <img src="img/guid.jpg" alt="team photo">
+                <img src="img/see.jpg" alt="team photo">
             </div>
             <div class="description">
-                <h1>Polytechnic Guide</h1>
+                <h1>Look & See</h1>
                 <div class="text">
-                    <p><b>Team:</b> Yurii Drevnytskyi</p>
-                    <p class='truncated'>It is an helpful adaptive website which help you to navigate in Polytechnic university. Its show the right way between buildings of the university,transport which u need and,the location of the main transport stops.Also you can find
-                        here the main map of location all university buildings and their photos,description,etc..</p>
+                    <p><b>Team:</b>Novosad Ruslana,Peleshchak Julia,Andrew Romaniuk,Vitaliy Strizhyk,Svyatoslav Shilkov</p>
+                    <p class='truncated'>Easy image preparation and cascade training</p>
                 </div>
             </div>
         </div>
@@ -258,96 +257,94 @@
 
 
         <!-- START CARD -->
-        <div class="card">
+        <div class="card" id="team4">
             <div class="team-photo">
-                <img src="img/guid.jpg" alt="team photo">
+                <img src="img/texityfy1.jpg" alt="team photo">
             </div>
             <div class="description">
-                <h1>Polytechnic Guide</h1>
+                <h1>Textify</h1>
                 <div class="text">
-                    <p><b>Team:</b> Yurii Drevnytskyi</p>
-                    <p class='truncated'>It is an helpful adaptive website which help you to navigate in Polytechnic university. Its show the right way between buildings of the university,transport which u need and,the location of the main transport stops.Also you can find
-                        here the main map of location all university buildings and their photos,description,etc..</p>
+                    <p><b>Team:</b>Natyahlyy Andriy,Brusentsov Heorhiy,Heletiy Sofiya,Filipenko Mykhaylo,Turkolyak Viktoriya</p>
+                    <p class='truncated'>Textify is an easy to use document scanner. It can find document on images and crop them. It uses machine learning to determine main colors on image and reduces size of scanned document up to 5 times!</p>
                 </div>
             </div>
         </div>
         <!-- END CARD -->
 
         <!-- START CARD -->
-        <div class="card">
+        <div class="card" id="team4">
             <div class="team-photo">
-                <img src="img/guid.jpg" alt="team photo">
+                <img src="img/app.jpg" alt="team photo">
             </div>
             <div class="description">
-                <h1>Polytechnic Guide</h1>
+                <h1>Attendance App</h1>
                 <div class="text">
-                    <p><b>Team:</b> Yurii Drevnytskyi</p>
-                    <p class='truncated'>It is an helpful adaptive website which help you to navigate in Polytechnic university. Its show the right way between buildings of the university,transport which u need and,the location of the main transport stops.Also you can find
-                        here the main map of location all university buildings and their photos,description,etc..</p>
+                    <p><b>Team:</b>Rostyslav Vasylyk, Yanina Husarevych</p>
+                    <p class='truncated'>The purpose of the project is to help student wake up in the morning in time, come to the lesson in advance and not spend time on boring checking of presence. The alarm clock will help get up, and the Attendance App will save time
+                        for learning something more during the lesson.</p>
                 </div>
             </div>
         </div>
         <!-- END CARD -->
 
         <!-- START CARD -->
-        <div class="card" id="team1">
+        <div class="card" id="team4">
             <div class="team-photo">
                 <img src="img/guid.jpg" alt="team photo">
+                <div class="button"><a href="http://polytechnic-guide.000webhostapp.com/" target="_blank"> Visit </a></div>
             </div>
             <div class="description">
                 <h1>Polytechnic Guide</h1>
                 <div class="text">
                     <p><b>Team:</b> Yurii Drevnytskyi</p>
-                    <p class='truncated'>It is an helpful adaptive website which help you to navigate in Polytechnic university. Its show the right way between buildings of the university,transport which u need and,the location of the main transport stops.Also you can find
-                        here the main map of location all university buildings and their photos,description,etc..</p>
+                    <p class='truncated'>It is an helpful adaptive website which help you to navigate in Polytechnic university. Its show the right way between buildings of the university,transport which u need and,the location of the main transport stops.</p>
                 </div>
             </div>
         </div>
         <!-- END CARD -->
 
         <!-- START CARD -->
-        <div class="card" id="team1">
+        <div class="card" id="team5">
             <div class="team-photo">
-                <img src="img/guid.jpg" alt="team photo">
+                <img src="img/cheaker.png" alt="team photo">
+                <div class="button"><a href="http://neuralnetwork-site.zzz.com.ua/#slide" target="_blank"> Visit </a></div>
             </div>
             <div class="description">
-                <h1>Polytechnic Guide</h1>
+                <h1>SymptomChecker</h1>
                 <div class="text">
-                    <p><b>Team:</b> Yurii Drevnytskyi</p>
-                    <p class='truncated'>It is an helpful adaptive website which help you to navigate in Polytechnic university. Its show the right way between buildings of the university,transport which u need and,the location of the main transport stops.Also you can find
-                        here the main map of location all university buildings and their photos,description,etc..</p>
+                    <p><b>Team:</b>Mukalov Pavlo, Koziy Dimitro</p>
+                    <p class='truncated'>SymptomChecker - neural network which predict users disease.</p>
                 </div>
             </div>
         </div>
         <!-- END CARD -->
 
         <!-- START CARD -->
-        <div class="card" id="team1">
+        <div class="card" id="team5">
             <div class="team-photo">
-                <img src="img/guid.jpg" alt="team photo">
+                <img src="img/puzzel1.jpg" alt="team photo">
             </div>
             <div class="description">
-                <h1>Polytechnic Guide</h1>
+                <h1>Puzzle-Backpack</h1>
                 <div class="text">
-                    <p><b>Team:</b> Yurii Drevnytskyi</p>
-                    <p class='truncated'>It is an helpful adaptive website which help you to navigate in Polytechnic university. Its show the right way between buildings of the university,transport which u need and,the location of the main transport stops.Also you can find
-                        here the main map of location all university buildings and their photos,description,etc..</p>
+                    <p><b>Team:</b>Victoria Stasiv</p>
+                    <p class='truncated'>"Educational game:"Puzzles-Backpack"- (create a 10-part school backpack, learning English words and verse)</p>
                 </div>
             </div>
         </div>
         <!-- END CARD -->
 
         <!-- START CARD -->
-        <div class="card" id="team1">
+        <div class="card" id="team5">
             <div class="team-photo">
-                <img src="img/guid.jpg" alt="team photo">
+                <img src="img/cube.jpg" alt="team photo">
+                <div class="button"><a href="https://ledcube.000webhostapp.com/" target="_blank"> Visit </a></div>
             </div>
             <div class="description">
-                <h1>Polytechnic Guide</h1>
+                <h1>Led Cube</h1>
                 <div class="text">
-                    <p><b>Team:</b> Yurii Drevnytskyi</p>
-                    <p class='truncated'>It is an helpful adaptive website which help you to navigate in Polytechnic university. Its show the right way between buildings of the university,transport which u need and,the location of the main transport stops.Also you can find
-                        here the main map of location all university buildings and their photos,description,etc..</p>
+                    <p><b>Team:</b>Andrey Alekseev,Xenia Butko,Vladislav Uvarov</p>
+                    <p class='truncated'>Our project is a 3D screen that is a cube of LEDs that works on the arduino UNO.</p>
                 </div>
             </div>
         </div>
@@ -355,36 +352,192 @@
 
 
         <!-- START CARD -->
-        <div class="card" id="team1">
+        <div class="card" id="team6">
             <div class="team-photo">
-                <img src="img/guid.jpg" alt="team photo">
+                <img src="img/od.jpg" alt="team photo">
             </div>
             <div class="description">
-                <h1>Polytechnic Guide</h1>
+                <h1>Space Odyssey</h1>
                 <div class="text">
-                    <p><b>Team:</b> Yurii Drevnytskyi</p>
-                    <p class='truncated'>It is an helpful adaptive website which help you to navigate in Polytechnic university. Its show the right way between buildings of the university,transport which u need and,the location of the main transport stops.Also you can find
-                        here the main map of location all university buildings and their photos,description,etc..</p>
+                    <p><b>Team:</b>Skoropad Michael,Horblyuk Valentyn</p>
+                    <p class='truncated'>Our team wants to create an arduino robot that can follow a line ,avoiding obstacles. As a territory for robot we used map with drawn on it surface of Uranus.</p>
                 </div>
             </div>
         </div>
         <!-- END CARD -->
 
         <!-- START CARD -->
-        <div class="card" id="team1">
+        <div class="card" id="team6">
             <div class="team-photo">
-                <img src="img/guid.jpg" alt="team photo">
+                <img src="img/marsrovere.jpg" alt="team photo">
+                <div class="button"><a href="http://ainulp.zzz.com.ua/" target="_blank"> Visit </a></div>
             </div>
             <div class="description">
-                <h1>Polytechnic Guide</h1>
+                <h1>Mars Rovere</h1>
                 <div class="text">
-                    <p><b>Team:</b> Yurii Drevnytskyi</p>
-                    <p class='truncated'>It is an helpful adaptive website which help you to navigate in Polytechnic university. Its show the right way between buildings of the university,transport which u need and,the location of the main transport stops.Also you can find
-                        here the main map of location all university buildings and their photos,description,etc..</p>
+                    <p><b>Team:</b>Ostap Hrytsyk,Yaroslav Parylyak,Pavlo Ustumenko,Orest Korol</p>
+                    <p class='truncated'>We are creating a t-robot based on arduino, that will follow the line and pass different barriers located on surface of Mars</p>
                 </div>
             </div>
         </div>
         <!-- END CARD -->
+
+
+
+        <!-- START CARD -->
+        <div class="card" id="team6">
+            <div class="team-photo">
+                <img src="img/car.jpg" alt="team photo">
+            </div>
+            <div class="description">
+                <h1>City explorer</h1>
+                <div class="text">
+                    <p><b>Team:</b>.Shalavylo Volodymyr,Andriy Stasyuk,Telishevskyi Petro,Yuriy Yatskiv,Valerii Yakovlev.</p>
+                    <p class='truncated'>Our goal was to create a robot , which would be able to overcome some obstacles in cities. Now we managed to do it and can introduce you our Sykhiv Explorer.</p>
+                </div>
+            </div>
+        </div>
+        <!-- END CARD -->
+
+
+        <!-- START CARD -->
+        <div class="card" id="team7">
+            <div class="team-photo">
+                <img src="img/mercury.jpg" alt="team photo">
+            </div>
+            <div class="description">
+                <h1>Mercury Rider</h1>
+                <div class="text">
+                    <p><b>Team:</b>Ivan Dubravskiy,Yuriy Zablotskiy,Vitaliy Popovich,Andrew Maliukh</p>
+                    <p class='truncated'>Our project is called "Mercury Rider" and the essence of it is to make an Arduino-based robot to explore the surface of the planet Mercury by following a white line.</p>
+                </div>
+            </div>
+        </div>
+        <!-- END CARD -->
+
+
+
+
+        <!-- START CARD -->
+        <div class="card" id="team8">
+            <div class="team-photo">
+                <img src="img/marsplaneta.jpg" alt="team photo">
+            </div>
+            <div class="description">
+                <h1>MarsExplorer</h1>
+                <div class="text">
+                    <p><b>Team:</b>Dmytro Solodukha,Matviiv Mykola,Shegda Mykola,Darmoriz Igor,Kulievuch Roman</p>
+                    <p class='truncated'>Our objective is to create an arduino-car, that will ride along the dark line located on surface of Mars. This Arduino-based T-Bot will be able to "see" different objects around by using ultrasonic sensor. Upd : We have made already
+                        our Mars "surface".
+
+                    </p>
+                </div>
+            </div>
+        </div>
+        <!-- END CARD -->
+
+
+
+        <!-- START CARD -->
+        <div class="card" id="team8">
+            <div class="team-photo">
+                <img src="img/sk.jpg" alt="team photo">
+            </div>
+            <div class="description">
+                <h1>Explorer</h1>
+                <div class="text">
+                    <p><b>Team:</b>Skvortsov Illya,Ryvak Liliya,Semkovych Volodymyr,Rishkiv Volodymyr</p>
+                    <p class='truncated'>A fully autonomous robot which is able to move along a black line and avoid obstacles.</p>
+                </div>
+            </div>
+        </div>
+        <!-- END CARD -->
+
+
+        <!-- START CARD -->
+        <div class="card" id="team9">
+            <div class="team-photo">
+                <img src="img/moon.jpg" alt="team photo">
+            </div>
+            <div class="description">
+                <h1>"A-Moon"</h1>
+                <div class="text">
+                    <p><b>Team:</b>Volodya Solohub,Nazar Kiryk,Vova Kit,Max Martynyak
+                    </p>
+                    <p class='truncated'>We are making an Arduino-based T-Bot, which will be able to determine some obstacles by ultrasonic sensor,follow route given by a line. We have made our own moon prototype map.</p>
+                </div>
+            </div>
+        </div>
+        <!-- END CARD -->
+
+
+
+        <!-- START CARD -->
+        <div class="card" id="team9">
+            <div class="team-photo">
+                <img src="img/wifi.jpg" alt="team photo">
+            </div>
+            <div class="description">
+                <h1>"WiFi Tracing"</h1>
+                <div class="text">
+                    <p><b>Team:</b>Kuba Maxim,Shyika Andrew,Kovalchuk Dmytro,Boksho Karina,Vika Mikhailevich</p>
+                    <p class='truncated'>"WiFi Tracing" - the first stage of our project. The main aim is to create a small Arduino project that easily can send data with HTTP request </p>
+                </div>
+            </div>
+        </div>
+        <!-- END CARD -->
+
+
+        <!-- START CARD -->
+        <div class="card" id="team9">
+            <div class="team-photo">
+                <img src="img/guid.jpg" alt="team photo">
+                <div class="button"><a href="http://maximka.byethost3.com/?i=1" target="_blank"> Visit </a></div>
+            </div>
+            <div class="description">
+                <h1>"OnlyLogics"</h1>
+                <div class="text">
+                    <p><b>Team:</b>Yakovlyeva Kateryna,Shavarsky Maksym,Shevchuk Vitaliy</p>
+                    <p class='truncated'>First of all, I would like to say that developing of our project brought us a lot of previously unknown experience. Almost every day we have been learning how to deal with the software of our future robot, we also practiced a lot in
+                        mastering skills of work with the hardware part.</p>
+                </div>
+            </div>
+        </div>
+        <!-- END CARD -->
+
+        <!-- START CARD -->
+        <div class="card" id="team10">
+            <div class="team-photo">
+                <img src="img/timer.jpg" alt="team photo">
+            </div>
+            <div class="description">
+                <h1>Limedge</h1>
+                <div class="text">
+                    <p><b>Team:</b>Troyanovsʹka Olesya</p>
+                    <p class='truncated'>Limedge is an application that helps people, including students, to use their time appropriately, without distraction with the internet media. The basic principle of the work is the modes: educational, without access to the Internet,
+                        rest.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <!-- END CARD -->
+
+
+        <!-- START CARD -->
+        <div class="card" id="team9">
+            <div class="team-photo">
+                <img src="img/emlem (3).png" alt="team photo">
+            </div>
+            <div class="description">
+                <h1>Easy Lviv</h1>
+                <div class="text">
+                    <p><b>Team:</b>Romanko Stanislav,Kulikovich Dmitry,Shymansky Pavel,Ometyuh Rostislav</p>
+                    <p class='truncated'>Easy Lviv - online excursions to Lviv.</p>
+                </div>
+            </div>
+        </div>
+        <!-- END CARD -->
+
 
 
 
