--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                     <div class="some-text">
                         <p class="up-header">some text</p>
                         <a href="projects.html">Projects</a>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, cupiditate!</p>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit, fugiat, labore error perspiciatis rem assumenda delectus dolor amet enim doloremque consequuntur eos velit quam ullam ea temporibus, nobis facilis at perferendis voluptates
-                            possimus. Soluta illum sunt facere at labore aliquam!</p>
+                        <p>You are on the web-site of our dream team.Who are we?</p>
+                        <p>We are future developers of artificial intelligence.Now we are studying in Lviv Polytechnic University and we are really proud of it.Each student is ready to descover new progressive technologies and make our future and better
+                            step by step.We believe that new generation can improve this world. Here you can see our achivments and progress in developing.</p>
 
                     </div>
 
@@ -97,9 +97,9 @@
                     <div class="some-text">
                         <p class="up-header">some text</p>
                         <a href="achievements.html">Achievements</a>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, cupiditate!</p>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit, fugiat, labore error perspiciatis rem assumenda delectus dolor amet enim doloremque consequuntur eos velit quam ullam ea temporibus, nobis facilis at perferendis voluptates
-                            possimus. Soluta illum sunt facere at labore aliquam!</p>
+                        <p>We are very happy to have such possibility as creating interesting projects.</p>
+                        <p>While making our projects we gained wonderful experience in this field.Thanks to our teachers we designed our works and now you can see results of our work on this web-site.We are very happy to have such possibility as creating
+                            interesting projects.While making our projects we gained wonderful experience in this field.Thanks to our teachers we designed our works and now you can see results of our work on this web-site.</p>
 
                     </div>
                 </div>
