--- a/projects.html
+++ b/projects.html
@@ -526,7 +526,7 @@
         <!-- START CARD -->
         <div class="card" id="team9">
             <div class="team-photo">
-                <img src="img/emlem (3).png" alt="team photo">
+                <img src="img/lviv.jpg" alt="team photo">
             </div>
             <div class="description">
                 <h1>Easy Lviv</h1>
@@ -537,6 +537,24 @@
             </div>
         </div>
         <!-- END CARD -->
+
+
+        <!-- START CARD -->
+        <div class="card" id="team10">
+            <div class="team-photo">
+                <img src="img/car.jpg" alt="team photo">
+            </div>
+            <div class="description">
+                <h1>Lawn Mower</h1>
+                <div class="text">
+                    <p><b>Team:</b>Matviyiv Orest,Zaloussky Marko,Golak Marko-Maxim,Dankiv Anastasiya,Hrybovskyy Viktor,Bukin Sergey</p>
+                    <p class='truncated'>Smart Lawn Mower is a charming little robot mower, and leaving it alone to do its work can be hard. You can tell it to stop, start or park, or you can change its settings. In the unlikely event of theft, Smart Lawn Mower will sound
+                        an alarm, and you’ll receive precise GPS tracking of its location.</p>
+                </div>
+            </div>
+        </div>
+        <!-- END CARD -->
+
 
 
 
